tests/typing/bad/testfile-instance-2.scala

class C[U, V <: U] {}
class Test { var x : C[Int, Boolean] = null }
object Main { def main(args: Array[String]) { } }
